lein-bin based deployment with lowmem and project version as jvm opts